--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,60 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+nav {
+  padding: 0 1rem;
+}
+
+.content {
+  min-height: calc(100vh - 70px - 64px);
+  padding: 1.5rem 0;
+}
+
+.cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 1rem;
+}
+
+.search-btn {
+  position: absolute;
+  top: 0;
+  right: 0.5rem;
+}
+
+label:not(:last-child) {
+  margin-right: 1rem;
+}
+.imageclass {
+  max-height: 170px;
+}
+.card-image {
+  overflow: hidden;
+}
+.card-content {
+  padding-bottom: 15px;
+  overflow: hidden;
+}
+.header {
+  background-color: black !important;
+  font-family: "Bebas Neue", cursive;
+}
+.footer {
+  background-color: black !important;
+  font-family: "Bebas Neue", cursive;
+  color: white;
+  height: 50px;
+}
+.with-gap {
+  background-color: black;
+  color: white;
+  padding: 5px 10px;
+  font-family: "Bebas Neue", cursive;
+  font-size: 20px;
 }
